--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#6ab344</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="red">#FF0000</color>
     <color name="yellow">#FFFF00</color>
     <color name="orange">#FFAA00</color>
+    <color name="black">#000</color>
+    <color name="teal">#009688</color>
+    <color name="light_grey">#EEE</color>
 </resources>
