Menú de navegación inferior (bottom navegation menu) para la pantalla principal terminado. Ya se cambian los colores al pasar el foco.

--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -129,6 +129,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:backgroundTint="@color/colorPrimary"
+            android:textColor="@color/primaryText"
             android:paddingBottom="20dp"
             android:paddingLeft="50dp"
             android:paddingRight="50dp"
