--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:design="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="es.jcgallardo.colormix.MainActivity">
+    android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/content"
@@ -32,9 +30,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        app:itemBackground="@color/light_grey"
-        app:itemIconTint="@color/teal"
-        app:itemTextColor="@color/teal"
-        app:menu="@menu/navigation" />
+        design:itemBackground="@color/colorPrimaryDark"
+        design:itemIconTint="@color/bottom_navigation_icons_colors"
+        design:itemTextColor="@color/bottom_navigation_icons_colors"
+        design:menu="@menu/navigation" />
 
 </LinearLayout>
