--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/navigation_borrar"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_reset_black_24dp"
+        android:enabled="true"
         android:title="@string/title_borrar" />
 
     <item
         android:id="@+id/navigation_principal"
         android:icon="@drawable/paint"
+        android:enabled="true"
         android:title="@string/title_principal" />
 
     <item
         android:id="@+id/navigation_paleta"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/ic_paleta_black_24dp"
+        android:enabled="true"
         android:title="@string/title_paleta" />
 
 
