--- a/app/src/main/res/layout/fragment_principal.xml
+++ b/app/src/main/res/layout/fragment_principal.xml
@@ -1,24 +1,48 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<ScrollView android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@color/light_grey"
-    android:padding="50dp"
-    tools:context="es.jcgallardo.colormix.ItemsFragments.PrincipalFragment">
+    android:layout_width="match_parent">
 
-    <TextView
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fontFamily="casual"
-        android:text="@string/principal_fragment_title"
-        android:textAlignment="center"
-        android:textSize="18sp" />
+        android:padding="50dp"
+        tools:context="es.jcgallardo.colormix.ItemsFragments.PrincipalFragment"
+        android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/painting_draw"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:tint="@color/white"
-        app:srcCompat="@drawable/paint" />
-</FrameLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="casual"
+            android:text="@string/principal_fragment_title"
+            android:textAlignment="center"
+            android:textSize="18sp" />
+
+        <ImageView
+            android:id="@+id/painting_draw"
+            android:layout_width="wrap_content"
+            android:layout_height="350dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:tint="@color/white"
+            app:srcCompat="@drawable/paint"
+            android:contentDescription="@string/dibujo_mezclado" />
+
+        <TextView
+            android:id="@+id/textColor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="casual"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="@string/mi_color_seleccionado"
+            android:background="@color/colorAccent"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:textSize="24sp"/>
+    </LinearLayout>
+</ScrollView>
