--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,7 +15,7 @@
     <color name="orange">#FFAA00</color>
     <color name="black">#000</color>
     <color name="teal">#009688</color>
-    <color name="light_grey">#EEE</color>
+    <color name="light_grey">#eeeeee</color>
     <color name="dark_grey">#777</color>
     <color name="primary_light">#B2DFDB</color>
     <color name="white">#FFFFFF</color>
