--- a/app/src/main/res/layout/fragment_principal.xml
+++ b/app/src/main/res/layout/fragment_principal.xml
@@ -1,52 +1,138 @@
-<ScrollView android:layout_height="match_parent"
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@color/light_grey"
-    android:layout_width="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:orientation="vertical">
+
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="es.jcgallardo.colormix.ItemsFragments.PrincipalFragment"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="10dp"
+        android:background="@color/colorPrimary"
+        tools:context=".MainActivity"
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="casual"
-            android:paddingTop="50dp"
-            android:paddingLeft="50dp"
-            android:paddingRight="50dp"
-            android:text="@string/principal_fragment_title"
-            android:textAlignment="center"
-            android:textSize="18sp" />
-
-        <ImageView
-            android:id="@+id/painting_draw"
-            android:layout_width="wrap_content"
-            android:paddingLeft="50dp"
-            android:paddingRight="50dp"
-            android:layout_height="350dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:tint="@color/white"
-            app:srcCompat="@drawable/paint"
-            android:contentDescription="@string/dibujo_mezclado" />
-
-        <TextView
-            android:id="@+id/textColor"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="casual"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:text="@string/mi_color_seleccionado"
-            android:background="#BBB"
-            android:textColor="@color/white"
+            android:text="@string/principal_fragment_title"
             android:textAlignment="center"
-            android:textSize="24sp"/>
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+
+        <LinearLayout
+            android:textAlignment="center"
+            android:layout_height="40dp"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:padding="10dp"
+            android:layout_width="match_parent">
+
+
+            <ImageView
+                android:id="@+id/iv1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:tint="@color/colorPrimary"
+                app:srcCompat="@android:drawable/radiobutton_off_background"
+                android:contentDescription="color1" />
+
+            <ImageView
+                android:id="@+id/iv2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:tint="@color/colorPrimary"
+                app:srcCompat="@android:drawable/radiobutton_off_background"
+                android:contentDescription="color2" />
+
+            <ImageView
+                android:id="@+id/iv3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:tint="@color/colorPrimary"
+                app:srcCompat="@android:drawable/radiobutton_off_background"
+                android:contentDescription="color3" />
+
+            <ImageView
+                android:id="@+id/iv4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:tint="@color/colorPrimary"
+                app:srcCompat="@android:drawable/radiobutton_off_background"
+                android:contentDescription="color4" />
+
+            <ImageView
+                android:id="@+id/iv5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:tint="@color/colorPrimary"
+                app:srcCompat="@android:drawable/radiobutton_off_background"
+                android:contentDescription="color5" />
+        </LinearLayout>
+
     </LinearLayout>
-</ScrollView>
+
+
+    <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_height="wrap_content"
+        android:background="@color/light_grey"
+        android:layout_width="match_parent"
+        android:id="@+id/scrollView2">
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="20dp"
+            tools:context="es.jcgallardo.colormix.ItemsFragments.PrincipalFragment"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/painting_draw"
+                android:layout_width="wrap_content"
+                android:layout_height="310dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="20dp"
+                android:contentDescription="@string/dibujo_mezclado"
+                android:paddingLeft="50dp"
+                android:paddingRight="50dp"
+                android:tint="@color/white"
+                app:srcCompat="@drawable/paint" />
+
+            <TextView
+                android:id="@+id/textColor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="casual"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="@string/mi_color_seleccionado"
+                android:background="#BBB"
+                android:textColor="@color/white"
+                android:textAlignment="center"
+                android:textSize="24sp"/>
+
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
